---
source: spade-tests/src/ast_lowering.rs
---
struct port A {}


extern entity x(a: inv &A) -> bool;
